--- a/.github/workflows/toECR.yml
+++ b/.github/workflows/toECR.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: US-EAST-1
+        aws-region: US-WEST-1
 
     - name: Login to Amazon ECR
       id: login-ecr
