--- a/.github/workflows/toECR.yml
+++ b/.github/workflows/toECR.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: "public.ecr.aws/o6c6k1c5"
         ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
         IMAGE_TAG: 3.0
       run: |
