--- a/.github/workflows/toECR.yml
+++ b/.github/workflows/toECR.yml
@@ -29,7 +29,8 @@ jobs:
       env:
         #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REGISTRY: "public.ecr.aws/o6c6k1c5"
-        ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
+        #ECR_REPOSITORY: ${{ secrets.REPO_NAME }}
+        ECR_REPOSITORY: "gp-dev-ecr-public"
         IMAGE_TAG: 3.0
       run: |
         # Build a docker container and push it to ECR 
