--- a/.github/workflows/toECS.yml
+++ b/.github/workflows/toECS.yml
@@ -88,7 +88,7 @@ jobs:
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
-        image: ${{ steps.build-image.outputs.image }}
+        image: public.ecr.aws/o6c6k1c5/gp-dev-ecr-public:latest
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
