--- a/.github/workflows/toECS.yml
+++ b/.github/workflows/toECS.yml
@@ -36,7 +36,7 @@ env:
   ECR_REPOSITORY: public.ecr.aws/o6c6k1c5/gp-dev-ecr-public           # set this to your Amazon ECR repository name
   ECS_SERVICE: gp-dev-ecs-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: gp-dev-ecs-cluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: /aws-task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: aws-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: gp-dev-ecs-container           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
