--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"crypto-js": "^4.0.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-rate-limit": "^6.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"jwk-to-pem": "^2.0.5",
 		"jwt-decode": "^3.1.2",
