--- a/package.json
+++ b/package.json
@@ -36,24 +36,14 @@
 	},
 	"dependencies": {
 		"aws-sdk": "^2.897.0",
-		"axios": "^0.21.1",
 		"config": "^3.3.6",
 		"crypto-js": "^4.0.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-rate-limit": "^6.1.0",
-		"jsonwebtoken": "^8.5.1",
-		"jwk-to-pem": "^2.0.5",
-		"jwt-decode": "^3.1.2",
-		"knex": "^0.21.1",
 		"memory-cache": "^0.2.0",
-		"moment": "^2.29.1",
-		"pg": "^8.3.0",
 		"reflect-metadata": "^0.1.13",
 		"tsyringe": "^4.5.0",
-		"tunnel-ssh": "^4.1.4",
-		"url-pattern": "^1.0.3",
-		"winston": "^3.3.3",
-		"zod": "^3.5.1"
+		"winston": "^3.3.3"
 	}
 }
