--- a/.github/workflows/dev-ecs.yml
+++ b/.github/workflows/dev-ecs.yml
@@ -32,14 +32,14 @@ on:
       - main
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: us-west-2                           # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: 075760899250.dkr.ecr.us-west-2.amazonaws.com/mfp-dev-ecr-falconbackend # set this to your Amazon ECR repository name
+  ECS_SERVICE: mfp-dev-ecs-service                # set this to your Amazon ECS service name
+  ECS_CLUSTER: mfp-dev-ecs-cluster                # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: mfp-dev-ecs-taskdefinition # set this to the path to your Amazon ECS task definition
+                                                  # file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: mfp-dev-falconservice           # set this to the name of the container in the
+                                                  # containerDefinitions section of your task definition
 
 jobs:
   deploy:
