--- a/.github/workflows/dev-ecs.yml
+++ b/.github/workflows/dev-ecs.yml
@@ -36,7 +36,7 @@ env:
   ECR_REPOSITORY: mfp-dev-ecr-falconbackend       # set this to your Amazon ECR repository name
   ECS_SERVICE: mfp-dev-ecs-service                # set this to your Amazon ECS service name
   ECS_CLUSTER: mfp-dev-ecs-cluster                # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: mfp-dev-ecs-taskdefinition # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: taskdef_dev/aws-task-definition.json # set this to the path to your Amazon ECS task definition
                                                   # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: mfp-dev-falconservice           # set this to the name of the container in the
                                                   # containerDefinitions section of your task definition
